# aeolipile

./: .gitmodules  CMakeLists.txt  README.md
core/: aeolipile.cxx
example/: CMakeLists.txt  example.cxx
include/: aeoilpile.hpp  aeolipile.hpp  define.hpp  gfx_iface.hpp  types.hpp
libs/: CMakeLists.txt
utils/: handle.hpp  log.cxx  log.hpp  pool.hpp
vulkan/: vk_defines.hpp  vulkan_context.cxx  vulkan_context.hpp
